--- a/website/contactos.htm
+++ b/website/contactos.htm
@@ -10,11 +10,11 @@ content="text/html; charset=iso-8859-1">
 
 <p align="center"><font size="7">Contactos</font></p>
 
-<p align="center">Gonzalo Sánchez........ <a
-href="mailto:..........gonzalo_san@wanadoo.es">gonzalo_san@wanadoo.es</a></p>
+<p align="center">G......... <a
+href="mailto:..........xxxxx">xxxxx</a></p>
 
-<p align="center">Lia Strenge................. <a
-href="mailto:Lia.Strenge@gmx.de">Lia.Strenge@gmx.de</a></p>
+<p align="center">M................. <a
+href="mailto:yyyyy">yyyyy</a></p>
 
 <p>&nbsp;</p>
 
